moved bluetooth pairing to settings activity and created styling for setting activity

--- a/BT_Updated/app/src/main/res/values/strings.xml
+++ b/BT_Updated/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="workout">WORKOUT</string>
     <string name="analysis">ANALYSIS</string>
     <string name="settings">SETTINGS</string>
+    <string name="search_button">Search Paired Devices</string>
+    <string name="app_settings">SETTINGS</string>
 </resources>
